test_regress/t/t_bitwise_array_bad.out
%Error: t/t_bitwise_array_bad.v:13:19: Operator OR not defined for logic[1:0]$[1:0] operands
                                     : ... note: In instance 't'
   13 |    assign o = arr | 1;
      |                   ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_bitwise_array_bad.v:14:20: Operator OR not defined for logic[1:0]$[1:0] operands
                                     : ... note: In instance 't'
   14 |    assign o2 = arr | i + 1;
      |                    ^
%Error: Exiting due to
